# Rtcl

./: ChangeLog  LICENSE  Makefile.in  README  configure  configure.ac  pkgIndex.tcl.in
attic/Rtcl0.3/: Makefile.in  README  Rtcl.c  Rtcl.h  Rtcl.n  Rtcl.tmml  configure  configure.in  echohome.R  libpath.R  license.terms  man.macros  mkinstalldirs  pkgIndex.tcl  tcl.m4
attic/Rtcl0.3/autom4te.cache/: output.0  traces.0
autom4te.cache/: output.0  requests  traces.0
compat/: libR_dl.h
doc/: Rtcl.n  Rtcl.tmml
generic/: rtcl.c
tclconfig/: tcl.m4
tests/: all.tcl  rtcl.test  source-1.0.R
